Fix profile pic not showing issue

--- a/app/javascript/stylesheets/pages/home.scss
+++ b/app/javascript/stylesheets/pages/home.scss
@@ -765,3 +765,11 @@ body.cke_editable.cke_editable_themed.cke_contents_ltr.cke_show_borders {
 
 	}
 }
+
+.profile-circle {
+	background-color: #fff;
+	width: 25px;
+	min-width: 25px;
+	height: 25px;
+	border-radius: 50%;
+}
